fix overflow-y

--- a/src/css/catalog.css
+++ b/src/css/catalog.css
@@ -11,6 +11,8 @@
   width: 100%;
   background-color: var(--cards);
   margin-bottom: 20px;
+  /* ---- */
+  overflow-y: auto;
 }
 
 .catalog-card-img {
@@ -96,7 +98,7 @@
     font-size: 20px;
 
     /* ====...==== */
-    max-width: 283px;
+    /* max-width: 283px; */
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -122,7 +124,7 @@
 
   /*=====...=====  */
   .catalog-title {
-    max-width: 310px;
+    /* max-width: 310px; */
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
